# GenAI_5

./: .env.example  .gitignore  README.md
T2S/: my_application.md  readme.md  requirements.txt
T2S/basic_t2s/: basics_1.py  basics_2.py  basics_3.py
T2S/db/: create_db_neon.py  create_db_sqlalchemy.py
T2S/learning/: basic_t2s_flow_study_guide.md  data_lineage_study_guide.md  prompt_improvements_t2s_study_guide.md  sqlalchemy_study_guide.md  text_to_sql_project_guide.md
T2S/rag/: basics_4_rag.py  basics_5_self_improve.py  pinecone_db.py  schema_chunks.py
t2s-app/: README.md  docker-compose.yml
t2s-app/backend/: Dockerfile  pyproject.toml
t2s-app/backend/app/: config.py  dependencies.py  main.py
t2s-app/backend/app/api/: schemas.py
t2s-app/backend/app/api/routes/: ask.py  health.py
t2s-app/backend/app/core/: schema_chunks.py  vector_db.py
t2s-app/backend/app/services/: cache.py  nl_answer.py  pipeline.py  sql_runner.py
t2s-app/frontend/: Dockerfile  package-lock.json  package.json
t2s-app/frontend/src/app/: globals.css  layout.tsx  page.tsx
t2s-app/frontend/src/components/: Footer.tsx  PipelineViz.tsx  ResultsPanel.tsx  TechStack.tsx
t2s-app/learning/: backend_api_flow_guide.md  test_questions.md
